--- a/style.css
+++ b/style.css
@@ -58,9 +58,10 @@ li{
 body{
     display: flex;
     justify-content: center;
+    background-color: #f2EECB;
 }
 .texte{
-    margin-top: 2rem;
+    margin: 2rem 0 ;
     font-family: sans-serif;
     border: .1rem solid #999;
     width: 100rem;
@@ -69,6 +70,7 @@ body{
     font-size: 1.8rem;
     text-align: justify;
     box-shadow: .2rem .2rem .3rem #AAA;
+    background-color: white;
 }
 p{
     width: fit-content;
